<resources>
    <string name="app_name">Calculator</string>
    <string name="convert_name">换算器</string>
    <string name="cal_name">计算器</string>
    <string name="sci_cal_name">科学计算器</string>
    <string name="base_cal_name">进制计算器</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="double_zero">00</string>
    <string name="point">.</string>
    <string name="clean">C</string>
    <string name="delete">DEL</string>
    <string name="equal">=</string>
    <string name="sub">-</string>
    <string name="plus">+</string>
    <string name="multi">×</string>
    <string name="divide">÷</string>

    <string name="basic_cal">计算器</string>
    <string name="sic_cal">科学计算器</string>
    <string name="base_cal">进制计算器</string>
    <string name="house_loan_cal">房贷计算器</string>
    <string name="car_loan_cal">车贷计算器</string>

    <string name="length_conversion">长度换算</string>
    <string name="length_meter">米</string>
    <string name="length_kilo">千米</string>

    <string name="btn_sin">sin</string>
    <string name="btn_cos">cos</string>
    <string name="btn_tan">tan</string>
    <string name="btn_log">lg</string>
    <string name="btn_ln">ln</string>
    <string name="btn_left">(</string>
    <string name="btn_right">)</string>
    <string name="btn_i">i</string>
    <string name="btn_factorial">!</string>
    <string name="btn_sqrt">^</string>
    <string name="btn_evo">√</string>
    <string name="btn_pi">π</string>
    <string name="btn_e">e</string>
    <string name="cal_complex">计算复数</string>
    <string name="not_cal_complex">计算实数</string>

    <string name="btn_and">AND</string>
    <string name="btn_or">OR</string>
    <string name="btn_xor">XOR</string>
    <string name="btn_right_move"> <u>&#62;&gt;</u> </string>
    <string name="btn_left_move"> <u>&#60;&lt;</u> </string>
    <string name="all_clean">AC</string>
    <string name="btn_A">A</string>
    <string name="btn_B">B</string>
    <string name="btn_C">C</string>
    <string name="btn_D">D</string>
    <string name="btn_E">E</string>
    <string name="btn_F">F</string>

    <string name="convert_length">长度换算</string>
    <string name="convert_base">进制换算</string>
    <string name="convert_exchange_rate">汇率换算</string>
    <string name="convert_area">面积换算</string>
    <string name="convert_speed">速度换算</string>
    <string name="convert_weight">重量换算</string>
    <string name="convert_temperature">温度换算</string>
    <string name="convert_power">功率换算</string>
    <string name="convert_pressure">压强换算</string>
    <string name="convert_volume">体积换算</string>


    <string name="pm">皮米</string>
    <string name="nm">纳米</string>
    <string name="um">微米</string>
    <string name="mm">毫米</string>
    <string name="dm">分米</string>
    <string name="cm">厘米</string>
    <string name="m">米</string>
    <string name="km">千米</string>
    <string name="mi">英里</string>
    
    <string name="decimal">十进制</string>
    <string name="hexadecimal">十六进制</string>
    <string name="binary">二进制</string>
    <string name="octal">八进制</string>
</resources>
