<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="22.5dp"
    android:paddingRight="22.5dp"
    android:paddingTop="20dp">

    <Button
        android:id="@+id/btn_pm"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/pm"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_nm"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/nm"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_um"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/um"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_mm"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/mm"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_cm"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/cm"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_dm"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/dm"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_m"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/m"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_km"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/km"
        android:textColor="#000000"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btn_mi"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/mi"
        android:textColor="#000000"
        android:textSize="18sp" />
</LinearLayout>